# Therm-FM

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: run_thermal_steady_B.yaml  run_thermal_steady_L.yaml  run_thermal_steady_T.yaml  run_thermal_transient_B.yaml  run_thermal_transient_L.yaml  run_thermal_transient_T.yaml
scOT/: evaluate.py  evaluate_transient.py  model.py  train.py  trainer.py  utils.py
scOT/problems/: base.py
scOT/problems/thermal/: __init__.py  steady.py  transient.py
